--- a/kd/deployment.yaml
+++ b/kd/deployment.yaml
@@ -26,7 +26,7 @@ spec:
         - name: registrykey
       initContainers:
         - name: truststore
-          image: quay.io/ukhomeofficedigital/cfssl-sidekick-jks:v0.0.6
+          image: quay.digital.homeoffice.gov.uk/ukhomeofficedigital/cfssl-sidekick-jks:v0.0.6
           securityContext:
             runAsNonRoot: true
             capabilities:
@@ -54,7 +54,7 @@ spec:
               readOnly: true
       containers:
         - name: certs
-          image: quay.io/ukhomeofficedigital/cfssl-sidekick:v0.0.6
+          image: quay.digital.homeoffice.gov.uk/ukhomeofficedigital/cfssl-sidekick:v0.0.6
           securityContext:
             runAsNonRoot: true
             capabilities:
@@ -79,7 +79,7 @@ spec:
               readOnly: true
 
         - name: proxy
-          image: quay.io/ukhomeofficedigital/nginx-proxy:v3.4.9
+          image: quay.digital.homeoffice.gov.uk/ukhomeofficedigital/nginx-proxy:v3.4.9
           imagePullPolicy: Always
           securityContext:
             runAsNonRoot: true
@@ -127,7 +127,7 @@ spec:
             - name: https
               containerPort: 10443
         - name: hocs-templates
-          image: quay.io/ukhomeofficedigital/hocs-templates:{{.VERSION}}
+          image: quay.digital.homeoffice.gov.uk/ukhomeofficedigital/hocs-templates:{{.VERSION}}
           imagePullPolicy: Always
           securityContext:
             runAsNonRoot: true
